--- a/hackaton/landing/templates/base.html
+++ b/hackaton/landing/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="canonical" href="{{ request.build_absolute_uri }}">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script>
         tailwind.config = {
             theme: {
@@ -113,5 +114,10 @@
     {% block extra_body %}{% endblock %}
 
     <script src="{% static 'js/main.js' %}"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Feather Icons -->
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </body>
 </html>
