--- a/hackaton/landing/templates/base.html
+++ b/hackaton/landing/templates/base.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hack the BEST - 24-hodinový hackathon v Košiciach organizovaný študentskou organizáciou BEST Košice. Príďte ukázať svoje schopnosti a vyhrajte skvelé ceny!">
+    <meta name="description" content="Code4BEST - 24-hodinový hackathon v Košiciach organizovaný študentskou organizáciou BEST Košice. Príďte ukázať svoje schopnosti a vyhrajte skvelé ceny!">
     <meta name="keywords" content="hackathon, Košice, BEST, programming, competition, technology, innovation, students, hackathon, Košice, BEST, programovanie, súťaž, technológie, inovácie, študenti, coding, kódovanie, engineering, inžinierstvo, teamwork, tímová práca, startup, startup, networking, networking, skills development, rozvoj zručností, problem-solving, riešenie problémov, creativity, kreativita">
     <meta name="author" content="BEST Košice">
-    <meta property="og:title" content="Hack the BEST - Hackathon v Košiciach">
+    <meta property="og:title" content="Code4BEST">
     <meta property="og:description" content="24-hodinový hackathon organizovaný BEST Košice. Ukáž svoje schopnosti a vyhraj skvelé ceny!">
     <meta property="og:image" content="{% static 'images/best-logo.png' %}">
     <meta property="og:url" content="{{ request.build_absolute_uri }}">
     <meta name="twitter:card" content="summary_large_image">
-    <title>{% block title %}Hack the BEST - Hackathon v Košiciach{% endblock %}</title>
+    <title>{% block title %}Code4BEST{% endblock %}</title>
     <link rel="canonical" href="{{ request.build_absolute_uri }}">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
