--- a/hackaton/landing/templates/index.html
+++ b/hackaton/landing/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Hack the BEST{% endblock %}
+{% block title %}Code4BEST{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
