--- a/hackaton/landing/templates/includes/footer.html
+++ b/hackaton/landing/templates/includes/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<footer class="bg-[#990033] text-white py-12">
+<footer class="bg-[#17789C] text-white py-12">
     <div class="container mx-auto px-4 md:px-6">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <div>
